<resources>
  <string name="app_name">Language Translation Example</string>
  <string name="translation_label">Translation:</string>
  <string name="translate">Execute</string>
  <string name="input_hint">enter text</string>
  <string name="target_language">Target Language</string>
  <string name="spanish">Spanish</string>
  <string name="french">French</string>
  <string name="italian">Italian</string>
  <string name="microphone">Microphone</string>
  <string name="play">Play</string>
</resources>
